--- a/App WatchKit Extension/Info.plist
+++ b/App WatchKit Extension/Info.plist
@@ -29,7 +29,7 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>WKAppBundleIdentifier</key>
-			<string>MITML.App.watchkitapp</string>
+			<string>Augmental.HandsDown.watchkitapp</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
