--- a/HandsDown.xcodeproj/xcshareddata/xcschemes/App WatchKit Extension.xcscheme
+++ b/HandsDown.xcodeproj/xcshareddata/xcschemes/App WatchKit Extension.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1130"
-   version = "2.0">
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "0ABD8DF62417EB150024B22F"
-               BuildableName = "App WatchKit App.app"
-               BlueprintName = "App WatchKit App"
+               BlueprintIdentifier = "0ABD8E052417EB160024B22F"
+               BuildableName = "App WatchKit Extension.appex"
+               BlueprintName = "App WatchKit Extension"
                ReferencedContainer = "container:HandsDown.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -28,9 +28,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "0ABD8DF32417EB140024B22F"
-               BuildableName = "App.app"
-               BlueprintName = "App"
+               BlueprintIdentifier = "0ABD8DF62417EB150024B22F"
+               BuildableName = "App WatchKit App.app"
+               BlueprintName = "App WatchKit App"
                ReferencedContainer = "container:HandsDown.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -46,25 +46,23 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      selectedDebuggerIdentifier = ""
+      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES"
-      launchAutomaticallySubstyle = "4"
-      notificationPayloadFile = "App WatchKit Extension/PushNotificationPayload.apns">
+      allowLocationSimulation = "YES">
       <RemoteRunnable
          runnableDebuggingMode = "2"
          BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/App WatchKit App">
+         RemotePath = "/App WatchKit Extension">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "0ABD8DF62417EB150024B22F"
-            BuildableName = "App WatchKit App.app"
-            BlueprintName = "App WatchKit App"
+            BlueprintIdentifier = "0ABD8E052417EB160024B22F"
+            BuildableName = "App WatchKit Extension.appex"
+            BlueprintName = "App WatchKit Extension"
             ReferencedContainer = "container:HandsDown.xcodeproj">
          </BuildableReference>
       </RemoteRunnable>
@@ -74,27 +72,25 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES"
-      launchAutomaticallySubstyle = "4"
-      notificationPayloadFile = "App WatchKit Extension/PushNotificationPayload.apns">
+      debugDocumentVersioning = "YES">
       <RemoteRunnable
          runnableDebuggingMode = "2"
          BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/App WatchKit App">
+         RemotePath = "/App WatchKit Extension">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "0ABD8DF62417EB150024B22F"
-            BuildableName = "App WatchKit App.app"
-            BlueprintName = "App WatchKit App"
+            BlueprintIdentifier = "0ABD8E052417EB160024B22F"
+            BuildableName = "App WatchKit Extension.appex"
+            BlueprintName = "App WatchKit Extension"
             ReferencedContainer = "container:HandsDown.xcodeproj">
          </BuildableReference>
       </RemoteRunnable>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "0ABD8DF62417EB150024B22F"
-            BuildableName = "App WatchKit App.app"
-            BlueprintName = "App WatchKit App"
+            BlueprintIdentifier = "0ABD8E052417EB160024B22F"
+            BuildableName = "App WatchKit Extension.appex"
+            BlueprintName = "App WatchKit Extension"
             ReferencedContainer = "container:HandsDown.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
